# C-language-minimal-spanning-tree

./: CMakeLists.txt  Teste.txt  main.c
entradas/: entrada.txt
lib/cidade/: Cidade.c  Cidade.h
lib/grafo/: Grafo.c  Grafo.h
saida/: viasAsfaltadas.txt
services/: Controler.c  Controler.h
services/controleEntradaSaida/: ControleArquivo.c  ControleArquivo.h
services/controleEntradaSaida/HeaderUtils/: ControleArquivo.h
services/geradorArquivo/: GeradorArquivo.c  GeradorArquivo.h
services/leitorArquivo/: LeitorArquivo.c  LeitorArquivo.h
